fix compaction of berkeley mailboxes > 4gb, r=standard8, bug 721925